# Worker-Management-System-Refined

./: .gitignore  Admin.java  Admin.txt  CMakeLists.txt  README.md  Request.java  Workers.txt  compile.bat  compile.sh  customer.cpp  customers.json  payments.json  services.json  works_config.json
data/: admin.json  customers.json  payments.json  services.json  test_services.json  test_workers.json  workers.json  works_config.json
src/app/: Constants.java  Main.java  Models.java  Repository.java  Service.java
src/cpp/: CMakeLists.txt  controller.h  entities.h  helper.h  main.cpp  pricing.h  repos.h  services.h  ui.h
src/java/: Main.java  User.java  Work.java  Worker.java
test/app/: TestBackend.java
test/cpp/: CMakeLists.txt  test_customer.cpp
